--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,25 @@
-.propiedad {
-    color: blue;
+body{
+    background-image: url(../img/background.jpg);   
+    
+}
+.card{
+    margin: auto;
+}
+.descripcion{
+    font-family: verdana;
+    font-size: 12px;    
+}
+.registro{
+    font-family: verdana;
+    font-size: 15px;
     text-align: center;
+    background-color: rgb(81, 158, 81);
+    height: 40px;
+}
+.aea{
+    padding-right: 600px;
+    padding-left: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
-h1 {
-    color: blue
-}
-
-nav {
-    text-align: center;
-}
-
-section {
-    text-align: center;
-}
-
-header {
-    text-align: center;
-}
